# pyo3-trio

./: .envrc  .gitignore  Cargo.toml  flake.nix  main.py  pyproject.toml  readme.md
src/: coroutine.rs  lib.rs  pyfuture.rs  trio.rs
