[package]
name = "pyrstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrstest"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
pyo3 = "0.26"
# pyo3-async = {version = "0.3.2", path = "./pyo3-async" }
